# colony-management

./: .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  LICENSE  Makefile  README.md  STYLEGUIDE.md  family_tree_test_data.json  flake.nix  package-lock.json  package.json  pyproject.toml  railway.toml  start.sh
.github/workflows/: CI.yaml  latex.yaml
mousemetrics/: .gitignore  locustfile.py  manage.py
mousemetrics/media/mouse_imports/: mouse_stocks_2025.xlsx
mousemetrics/mouse_import/: admin.py  apps.py  forms.py  models.py  targets.py  urls.py  views.py
mousemetrics/mouse_import/migrations/: 0001_initial.py  0001_mapping_model_state.py  0002_alter_mouseimport_cell_range_and_more.py  0002_rename_mi_mapex_hdrfld_idx_mouse_impor_source__e1110b_idx_and_more.py  0003_alter_mouseimport_original_filename.py
mousemetrics/mouse_import/services/: __init__.py  coercion.py  fks.py  importer.py  io.py  io_excel.py  mapping.py  mapping_ai.py  mapping_train.py  validators.py
mousemetrics/mouse_import/templates/mouse_import/: import_form.html  import_preview.html  (+2 more)
mousemetrics/mouse_import/templatetags/: dict_extras.py
mousemetrics/mouse_import/tests/: conftest.py  date_coercion_test.py  import_flow_view_test.py  importer_test.py  mapping_model_training_test.py  range_forms_and_io_test.py  sheet.csv  sheet.xlsx  view_sheet.xlsx
mousemetrics/mouseapp/: admin.py  apps.py  backends.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
mousemetrics/mouseapp/fixtures/: mice.json
mousemetrics/mouseapp/migrations/: 0001_initial.py  0001_squashed_0004_alter_mouse_tube_number_alter_project_name_and_more.py  0002_alter_box_number_alter_mouse_tube_number.py  0002_alter_mouse_notes.py  0003_requestreply_studyplan_alter_box_options_and_more.py  0004_alter_mouse_tube_number_alter_project_name_and_more.py  0005_alter_box_number.py  0006_remove_membership_role.py  0007_box_location_mouse_study_plan_studyplan_end_date_and_more.py  0008_alter_project_options.py  0008_alter_request_options_request_created_at_and_more.py  0008_strain_mouse_new_strain.py  0009_box_pk_swap.py  0009_merge_20251111_1722.py  0009_migrate_strains.py  0009_strain_mouse_new_strain.py  0010_migrate_strains.py  0010_remove_mouse_new_strain_alter_mouse_strain.py  0010_sync_box_state.py  0011_remove_mouse_new_strain_alter_mouse_strain.py  0012_merge_20251117_1340.py  0012_mouse_cull_date_mouse_cull_reason_alter_mouse_strain.py  0013_merge_20251121_2307.py  0014_alter_mouse_strain.py  0015_update_choice_fields.py  0016_alter_box_number_alter_project_name_and_more.py  0017_replyreaction.py  0018_requestreply_quoted_reply.py  0019_alter_requestreply_quoted_reply.py  0020_alter_project_options.py  0020_notification_reply.py  0021_alter_studyplan_status.py  0021_merge_20260322_1840.py  0022_merge_20260324_2055.py  0023_mouseobservation.py  0024_genotype_rename_cull_date_mouse_death_date_and_more.py  0025_alter_mouseobservation_type_and_more.py
mousemetrics/mouseapp/templates/: home.html
mousemetrics/mouseapp/tests/: family_tree_test.py
mousemetrics/mousemetrics/: asgi.py  jinja2.py  logging.py  settings.py  urls.py  wsgi.py
mousemetrics/mousemetrics/static_src/: dist-styles.css  styles.css
mousemetrics/mousemetrics/templates/: base.html  footer.html  navbar.html
mousemetrics/templates/registration/: login.html
report/: README.md  main.tex
(+41 files in other folders)
