[project]
name = "colony-management"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "django>=5.2.7"
]

[dependency-groups]
dev = [
  "black>=25.9",
  "django-stubs>=5.2.7",
  "django-upgrade>=1.29",
  "djhtml>=3.0.10",
  "pre-commit>=4.3",
  "pre-commit-update>=0.8.0",
  "pyright>=1.1.406",
  "pytest>=8.4.2",
  "pytest-django>=4.11.1",
  "ruff>=0.13.3",
]

[tool.ruff]
line-length = 88
indent-width = 4

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mousemetrics.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = ["mousemetrics"]

[tool.pyright]
include = ["mousemetrics"]
exclude = ["**/migrations", ".venv", "mousemetrics/mouseapp/admin.py"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
