[project]
name = "colony-management"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "django>=5.2.7",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "django-anymail>=13.1",
  "gunicorn>=23.0.0",
  "whitenoise>=6.11.0",
  "pyrefly>=0.50.1",
  "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
  "black>=25.9",
  "django-stubs>=5.2.7",
  "django-upgrade>=1.29",
  "djhtml>=3.0.10",
  "pre-commit>=4.3",
  "pre-commit-update>=0.8.0",
  "pyrefly>=0.50.1",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-django>=4.11.1",
  "ruff>=0.13.3",
]

[tool.pyrefly.errors]
untyped-import = "ignore"

[tool.ruff]
line-length = 88
indent-width = 4

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mousemetrics.settings"
django_debug_mode = true
python_files = ["tests.py", "*_test.py"]
pythonpath = ["mousemetrics"]
addopts = "--cov=mousemetrics --cov-report term"

[tool.coverage.run]
omit = ["*/migrations/*", "mousemetrics/manage.py", "mousemetrics/mousemetrics/*"]


[tool.pyrefly]
project-includes = ["mousemetrics"]
project-excludes = [
    "**/migrations",
    ".venv",
    ".direnv"
]
search-path=["mousemetrics"]
infer-with-first-use = false
